Changes for version 0.9.8:

* Added SWIG interface for Perl.

* Fixed segmentation fault that occured when evaluating lists that are
  not within a ClassAd. 

* Added a ClassAdCollection::GetView() function. In combination with
  the existing view iterators, you can now iterate over an entire
  view, including the "root" view. 

* Some missing "virtual" keywords were added for virtual destructors

* A bunch of -Wuninitialized warnings were corrected.

* regexprMember has been added.

* The subscript operator now returns error instead of undefined if the
  argument is out of bounds.

* -0.0 is now handled correctly. 

* You can now do math with booleans. True is 1, False is 0. This lets
  us do things like:

  Rank = ((other.mips > 4000)*3) + ((other.ram > 1000)*2) +
         (other.disk>1400)

  This is frequently done in Condor, and we need this functionality in
  order to be backwards compatible. 

Changes for version 0.9.7: (released 28-Oct-2004) 

* The ClassAd tarball (and corresponding directory within the tarball)
  that is downloaded has changed it's format from
  classads_<version>.tar.gz to classads-version.tar.gz. This allows
  the ClassAd library to be used more easily in Condor--I hope it
  doesn't cause anyone problems.

* The name of the classad library now depends on the compile time
  options. There are four possible names:

  Name               | Classad Namespace? | Shared Library Functions?
  -------------------+--------------------+---------------------------
  libclassad.a       |       No           |            No
  libclassad_ns.a    |       Yes          |            Yes
  libclassad_sh.a    |       No           |            No
  libclassad_sh_ns.a |       Yes          |            Yes

  If you don't want these names, you can use the --libname argument to
  configure. To get the old behavior, you would have:

    configure --lib-name libclassad.a

* We are gradually improving the C++ API documentation. Early results
  can be seen at:
