@@ -24,7 +24,10 @@
 #ifndef __CLASSAD_STL_H__
 #define __CLASSAD_STL_H__
 
-#ifdef __GNUC__
+#if USING_STLPORT
+  #include <hash_map>
+  #include <slist>
+#elif defined(__GNUC__)
   #if (__GNUC__<3)
     #include <hash_map>
     #include <slist>
@@ -41,7 +44,10 @@
 #endif
 	
 
-#ifdef __GNUC__
+#if USING_STLPORT
+  #define classad_hash_map std::hash_map 
+  #define classad_slist    std::slist
+#elif defined(__GNUC__)
   #if (__GNUC__ == 3 && __GNUC_MINOR__ > 0)
     #define classad_hash_map __gnu_cxx::hash_map 
     #define classad_slist    __gnu_cxx::slist
